# flowcast

./: .gitignore  Dockerfile  LICENSE  README.md  area_regrid_test.py  dagpipes_demo.py  data.py  dynamic_insights.md  dynamic_insights.py  flags.py  pyproject.toml  regrid.py  requirements.txt  spacetime.py  test.py  wget-20230606122309.sh  wget-20230606131207.sh
.github/workflows/: deploy_on_version_change.yaml
demos/: area_regrid_test.py  dagpipes_demo.py  data.py  demo_scenarios.py  dojo_flowcast_job.py  input.json  preview_plot_demo.py  test.py
demos/data/for_dc_demo/: convert_to_netcdf.py  dc_demo.py  debugging_pipeline_copy.py  make_demo_data.py
demos/data/non_climate_scenarios/: disaster.py  minerals.py  plot_sphere.py  renewables.py
demos/data/non_climate_scenarios/minerals/zip2/2021_Table04_Datacube/: datacube_filterer.py
flowcast/: __init__.py  data.py  dynamic_insights.py  gadm.py  pipeline.py  regrid.py  spacetime.py  utilities.py
