[tool.poetry]
name = "flowcast"
version = "0.1.2.dev2"
description = "A framework for dynamically allowing users to easily string together operations over gridded netcdf data, and derived new insights from the data."
authors = ["David Samson <david@jataware.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
xarray = "^2023.1.0"
matplotlib = "^3.7.3"
geopandas = "^0.13.2"
rasterio = "^1.3.8"
cftime = "^1.6.2"
nc-time-axis = "^1.4.1"
scipy = "1.10.1"
typing-extensions = "^4.8.0"
rich = "^13.5.3"
netCDF4 = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]