[tool.poetry]
name = "flowcast"
version = "0.3.0"
description = "A framework for dynamically stringing together operations over gridded netcdf data, to create derived insights"
authors = ["David Samson <david@jataware.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
xarray = ">=0.19.0"
matplotlib = ">=3.5.2"
geopandas = ">=0.8.1"
rasterio = ">=1.2.10"
cftime = "^1.6.2"
nc-time-axis = "^1.4.1"
scipy = ">=1.6.2"
typing-extensions = "^4.8.0"
rich = "^13.5.3"
netCDF4 = ">=1.5.3"
tqdm = ">=4.64.0"
geofeather = "^0.3.0"
requests = ">=2.28.1"


[tool.poetry.group.dev.dependencies]
poetry = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]